# primal_dual_ilqr

./: README.md  pyproject.toml
primal_dual_ilqr/: constrained_optimizers.py  dual_tvlqr.py  kkt_helpers.py  linalg_helpers.py  optimizers.py  primal_tvlqr.py
tests/: cartpole.py  quadpendulum.py  simple_tests.py
